fixed the register alignment to be display: block for the first name, finished fixing the filter page and have the checkboxes in there and the layout is fixed

--- a/admin/styles/change-password-admin.css
+++ b/admin/styles/change-password-admin.css
@@ -51,7 +51,7 @@
     margin-left: 10px;
 }
 
-#change-password-admin .form-signin lable {
+#change-password-admin .form-content lable {
     font-family: Aleo, 'Times New Roman', Times, serif;
     font-weight: 400;
     font-size: 18px;
@@ -60,15 +60,22 @@
     margin-top: 50px;
     padding: 20px 5px 5px 20px;
     margin-bottom: 30px;
+    display: block;
+    margin: 0 auto; 
+
 }
 
 #change-password-admin .form-signin input {
     width: 100%;
+    
+
+
 }
 
 #change-password-admin .password {
     padding: 10px 5px 5px 0px;
     margin-bottom: -25px;
+
 }
 
 
